# scannie

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md  justfile  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  scorecard.yml
src/scannie/: __init__.py  artifacts.py  cli.py  command.py  detections.py  doctor.py  epub.py  explain.py  models.py  pdf.py  report.py  rules.py  scanner.py  url_reputation.py  utils.py  verdict.py  virustotal.py  yara.py
src/scannie/rules/: epub-risk.yar  pdf-risk.yar
tests/: conftest.py  fakes.py  test_cli.py  test_command.py  test_epub_scanner.py  test_models.py  test_pdf_scanner.py  test_report.py  test_rules.py  test_scanner_common.py  test_url_reputation.py  test_verdict.py  test_virustotal.py
